Updated Russian translation (by michfood@XDA)

--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -1,26 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Xposed Installer</string>
-    <string name="tabInstall">Система</string>
+    <string name="welcome">Добро пожаловать в <b>Xposed Installer</b>!\nВыберите что бы Вы хотели сделать:</string>
+    <string name="tabInstall">Фреймворк</string>
+    <string name="tabInstallDescription">Здесь Вы можете настраивать Xposed framework, который необходим для работы модулей.</string>
     <string name="tabModules">Модули</string>
+    <string name="tabModulesDescription">"Фреймворк сам по себе не добавляет никакого фунционала. Для этого необходимо установить модули. В этом разделе вы можете активировать модули, после того как Вы их установили</string>
+    <string name="tabDownload">Загрузка</string>
+    <string name="tabDownloadDescription">Этот раздел дает Вам доступ к репозиторию модулей, в котором Вы можете найти и загрузить нужный модуль, а также проверять обновления.</string>
+    <string name="welcome_framework_update_available">Доступно обновление для Xposed framework.</string>
+    <string name="welcome_update_available">Доступны обновления для модулей.</string>
+    <string name="tabSettings">Настройки</string>
+    <string name="tabSettingsDescription">Выберите этот раздел для настройки Xposed Installer и фреймворка.</string>
+    <string name="tabAbout">О программе</string>
+    <string name="tabAboutDescription">Узнайте о людях, которые создали Xposed, о том, где можно получить дополнительную информацию и т.д.</string>
     <string name="install">Установить/Обновить</string>
-    <string name="uninstall">Удаление</string>
+    <string name="uninstall">Удалить</string>
     <string name="installedVersion">текущая</string>
     <string name="none">---</string>
-    <string name="latestVersion">в пакете</string>
+    <string name="latestVersion">доступная</string>
     <string name="versions">Версии:</string>
-    <string name="soft_reboot">Мягкая перезагрузка</string>
-    <string name="reboot">Перезагрузка</string>
+    <string name="soft_reboot">Быстрая перезагрузка</string>
+    <string name="reboot">Полная перезагрузка</string>
     <string name="areyousure">Вы уверены?</string>
+    <string name="phone_not_compatible">Xposed (пока) не совместим с версией Android SDK %1$d или архитектурой процессора (%2$s).</string>
+    <string name="not_tested_but_compatible">Xposed не был протестирован с Android SDK версии %d, но может быть совместим. Вы можете попробовать его установить, если хотите приключений.</string>
     <string name="module_is_not_activated_yet">Xposed модуль еще не активирован</string>
     <string name="module_empty_description">(описание отсутствует)</string>
     <string name="module_no_ui">Этот модуль не содержит пользовательского интерфейса</string>
     <string name="no_xposed_modules_found">Xposed модули не найдены!</string>
     <string name="xposed_module_list_updated">Cписок модулей Xposed был обновлен\nИзменения станут активными при перезагрузке</string>
     <string name="warning_xposed_min_version">Этот модуль требует более новой версии XposedBridge (%d) и не может быть активирован.</string>
-    <string name="phone_not_compatible">Xposed (пока) не совместим с версией Android SDK %1$d или архитектурой процессора (%2$s).</string>
-    <string name="not_tested_but_compatible">Xposed не был протестирован с Android SDK версии %d, но может быть совместим. Вы можете попробовать его установить, если вы хотите приключений.</string>
     <string name="no_min_version_specified">Этот модуль не указал версию XposedBridge, в которой он нуждается.</string>
-    <string name="warning_min_version_too_low">Этот модуль был создан для XposedBridge %1$d версии, но из-за несовместимых изменений в %2$d версии он была отключен.</string>
-    <string name="translator">jack_nuclear</string>
+    <string name="warning_min_version_too_low">Этот модуль был создан для XposedBridge %1$d версии, но из-за несовместимых изменений в %2$d версии он был отключен.</string>
+    <string name="module_launch">Запуск UI</string>
+    <string name="module_download_updates">Загрузить/Обновить</string>
+    <string name="module_support">Поддержка</string>
+    <string name="module_app_info">О приложении</string>
+    <string name="module_uninstall">Удалить</string>
+    <string name="menuSearch">Поиск</string>
+    <string name="menuReload">Перезагрузка</string>
+    <string name="changes">Изменения:</string>
+    <string name="branch_display">(%s подразделение)</string>
+    <string name="download_author">от %s</string>
+    <string name="download_unknown_author">неизвестный автор</string>
+    <string name="download_status_installed">Установлено (версия %s)</string>
+    <string name="download_status_update_available">Доступно обновление (версия %1$s \u2192 %2$s)</string>
+    <string name="download_timestamps">Добавлено %1$s \u00b7 Обновлено %2$s</string>
+    <string name="download_sorting_title">Порядок сортировки</string>
+    <string name="download_sorting_status">По статусу</string>
+    <string name="download_sorting_updated">По дате обновления</string>
+    <string name="download_sorting_created">По дате создания</string>
+    <string name="download_section_framework">Фреймворк</string>
+    <string name="download_section_update_available">Доступно обновление</string>
+    <string name="download_section_installed">Установлено</string>
+    <string name="download_section_not_installed">Не установлено</string>
+    <string name="download_section_24h">Последние 24 часа</string>
+    <string name="download_section_7d">Последние 7 дней</string>
+    <string name="download_section_30d">Последние 30 дней</string>
+    <string name="download_section_older">Более 30 дней назад</string>
+    <string name="settings_group_download">Загрузка</string>
+    <string name="settings_enable_downloads">Разрешить загрузку</string>
+    <string name="settings_enable_downloads_summary">Разрешить проверять обновления Xposed Installer и модулей для него</string>
+    <string name="settings_group_experimental">Экспериментально</string>
+    <string name="settings_performance_experiment">Эксперимент по производительности</string>
+    <string name="settings_performance_experiment_summary">Если активировать эту опцию, производительность устройства может увеличиться, уменьшиться или остаться на прежнем уровне. Пробуйте и рассказывайте о достигнутом результате. Для того чтобы изменения вступили в силу - необходимо переустановить фреймворк.</string>
+    <string name="about_developers_label">Главные разработчики:</string>
+    <string name="about_developers"><a href="http://forum.xda-developers.com/member.php?u=4419114">rovo89</a> и <a href="http://forum.xda-developers.com/member.php?u=4322181">Tungstwenty</a></string>
+    <string name="about_developers_warning">Пожалуйста, <b>НЕ</b> пишите нам для решения вопросов напрямую, используйте ссылку ниже.</string>
+    <string name="about_translator_label">Переводчик:</string>
+    <string name="translator">michfood</string>
+    <string name="about_version_label">Версия этого приложения:</string>
+    <string name="about_source_label">Исходный код:</string>
+    <string name="about_support_label">Поддержка и обсуждение:</string>
+    <string name="about_support_warning">Эта ссылка <b>только</b> на Xposed Installer и фреймворк! Если Вам нужна поддержка по какому-либо модулю - <b>НЕ</b> используйте ее, связывайтесь с автором модуля.</string>
+    <string name="about_libraries_label">Использованные библиотеки:</string>
+    <string name="download_view_download">Загрузка</string>
+    <string name="download_view_install">Установка</string>
+    <string name="download_view_cancel">Отмена</string>
+    <string name="download_view_no_url">Нет доступных URL для загрузки</string>
+    <string name="download_view_running">Процесс загрузки (%1$,d из %2$,d kB)</string>
+    <string name="download_view_waiting">Ожидание загрузки</string>
+    <string name="download_view_successful">Загрузка прошла успешно</string>
+    <string name="download_view_failed">Ошибка загрузки (%d)</string>
+    <string name="download_md5sum_incorrect">MD5 чексумма не совпадает (загружено: %1$s, ожидалось: %2$s)</string>
+    <string name="download_could_not_read_file">Невозможно прочесть загруженный файл: %s</string>
+    <string name="download_no_valid_apk">Загруженный файл не является APK (или несовместим)</string>
+    <string name="download_incorrect_package_name">Название пакета некорректно (загружено: %1$s, ожидалось: %2$s)</string>
+    <string name="repo_download_failed_http">Загрузка %1$s прервана: %2$d (%3$s)</string>
+    <string name="repo_download_failed">Загрузка %1$s прервана: %2$s</string>
+    <string name="repo_load_failed">Не могу загрузить репозиторий %1$s:\n%2$s</string>
 </resources>
