--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,6 +3,8 @@
 
     <!-- General/various strings -->
     <string name="app_name">Xposed Installer</string>
+    <string name="menuSend">Send</string>
+    <string name="menuSaveToSd">Save to SD card</string>
 
     <!-- Welcome screen / main sections -->
     <string name="welcome">Welcome to the <b>Xposed Installer</b>!\nPlease choose what you want to do:</string>
@@ -82,6 +84,8 @@
 
     <!--  Logs tab  -->
     <string name="logs_load_failed">Could not read log:</string>
+    <string name="logs_save_failed">Could not write log to SD card:</string>
+    <string name="sdcard_not_writable">SD card not found or not writable</string>
 
     <!-- About tab -->
     <string name="about_developers_label">Main developers:</string>
