--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -3,6 +3,9 @@
 
     <!-- General/various strings -->
     <string name="app_name">Xposed安装器</string>
+    <string name="menuSend">发送</string>
+    <string name="menuSaveToSd">发送到SD卡</string>
+    <string name="xposed_not_active">最新版本的Xposed当前未激活。您是否已安装框架并重启？</string>
 
     <!-- Welcome screen / main sections -->
     <string name="welcome">欢迎使用<b>Xposed安装器</b>\n请选择您想进行的操作：</string>
@@ -16,6 +19,8 @@
     <string name="welcome_update_available">一个或多个模块有更新可用。</string>
     <string name="tabSettings">设置</string>
     <string name="tabSettingsDescription">此处可配置Xposed安装器和框架。</string>
+    <string name="tabLogs">日志</string>
+    <string name="tabLogsDescription">显示并保存/发送Xposed框架产生的日志。</string>
     <string name="tabAbout">关于</string>
     <string name="tabAboutDescription">了解Xposed作者，如何获取帮助支持等。</string>
 
@@ -78,12 +83,17 @@
     <string name="settings_performance_experiment">性能试验</string>
     <string name="settings_performance_experiment_summary">如果您启用该选项，您的系统性能可能更好、更差或没有变化。请随意试用并回报您观察到的效果(或者根本没变化)。修改选项后您需要重新安装框架并重启。</string>
 
+    <!--  Logs tab  -->
+    <string name="logs_load_failed">无法读取日志：</string>
+    <string name="logs_save_failed">无法将日志写入SD卡：</string>
+    <string name="sdcard_not_writable">未找到SD卡或不可写入</string>
+
     <!-- About tab -->
     <string name="about_developers_label">主要开发者：</string>
     <string name="about_developers"><a href="http://forum.xda-developers.com/member.php?u=4419114">rovo89</a> 与 <a href="http://forum.xda-developers.com/member.php?u=4322181">Tungstwenty</a></string>
     <string name="about_developers_warning">请<b>不</b>要直接联系我们获取帮助，使用下面的链接。</string>
     <string name="about_translator_label">翻译：</string>
-    <string name="translator">Cye3s</string>
+    <string name="translator">Cye3s, liveasx</string>
     <string name="about_version_label">应用程序版本：</string>
     <string name="about_source_label">源码：</string>
     <string name="about_support_label">获取支持：</string>
