--- a/res/values-pt-rBR/strings.xml
+++ b/res/values-pt-rBR/strings.xml
@@ -3,6 +3,9 @@
 
     <!-- General/various strings -->
     <string name="app_name">Instalador do Xposed</string>
+    <string name="menuSend">Enviar</string>
+    <string name="menuSaveToSd">Salvar para o cartão SD</string>
+    <string name="xposed_not_active">A versão mais recente do Xposed ainda não foi ativada. Você instalou o framework e reiniciou o dispositivo?</string>
 
     <!-- Welcome screen / main sections -->
     <string name="welcome">Bem-vindo ao <b>Instalador do Xposed</b>!\nPor favor decida o que iremos fazer:</string>
@@ -16,6 +19,8 @@
     <string name="welcome_update_available">Uma ou mais atualizações de módulos disponível.</string>
     <string name="tabSettings">Configurações</string>
     <string name="tabSettingsDescription">Nesta guia você configura o Instalador do Xposed e o framework.</string>
+    <string name="tabLogs">Registros</string>
+    <string name="tabLogsDescription">Exibir e também salvar/enviar logs do Xposed framework.</string>
     <string name="tabAbout">Sobre</string>
     <string name="tabAboutDescription">Saber mais sobre as pessoas que criaram o Xposed, onde obter suporte, etc.</string>
 
@@ -77,6 +82,11 @@
     <string name="settings_group_experimental">Experimental</string>
     <string name="settings_performance_experiment">Experiência de performance</string>
     <string name="settings_performance_experiment_summary">Ao ativar isso, a performance do seu sistema pode melhorar, piorar ou ficar na mesma. Sinta-se livre para experimentar e me reportar os efeitos (ou ausência deles). Você precisa reinstalar o framework e reiniciar após ativar esta opção.</string>
+
+    <!--  Logs tab  -->
+    <string name="logs_load_failed">Não foi possível ler o registro:</string>
+    <string name="logs_save_failed">Não foi possível gravar o registro no cartão SD:</string>
+    <string name="sdcard_not_writable">O cartão SD não foi encontrado ou não permitiu a gravaçãSo</string>
 
     <!-- About tab -->
     <string name="about_developers_label">Principais desenvolvedores:</string>
