--- a/res/values-pt-rBR/strings.xml
+++ b/res/values-pt-rBR/strings.xml
@@ -78,6 +78,11 @@
     <string name="settings_performance_experiment">Experiência de performance</string>
     <string name="settings_performance_experiment_summary">Ao ativar isso, a performance do seu sistema pode melhorar, piorar ou ficar na mesma. Sinta-se livre para experimentar e me reportar os efeitos (ou ausência deles). Você precisa reinstalar o framework e reiniciar após ativar esta opção.</string>
 
+    <!--  Logs tab  -->
+    <string name="logs_load_failed">Não foi possível ler o registro:</string>
+    <string name="logs_save_failed">Não foi possível gravar o registro no cartão SD:</string>
+    <string name="sdcard_not_writable">O cartão SD não foi encontrado ou não permitiu a gravaçãSo</string>
+
     <!-- About tab -->
     <string name="about_developers_label">Principais desenvolvedores:</string>
     <string name="about_developers"><a href="http://forum.xda-developers.com/member.php?u=4419114">rovo89</a> e <a href="http://forum.xda-developers.com/member.php?u=4322181">Tungstwenty</a></string>
