--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -2,6 +2,9 @@
 <resources>
     <!-- General/various strings -->
     <string name="app_name">Xposed instalátor</string>
+    <string name="menuSend">Odeslat</string>
+    <string name="menuSaveToSd">Uložit na SD kartu</string>
+    <string name="xposed_not_active">Poslední verze Xposed frameworku není aktivní. Byl framework nainstalován a zařízení zrestartováno?</string>
     <!-- Welcome screen / main sections -->
     <string name="welcome">Vítejte v <b>Xposed Instalátoru</b>!\nZde je možné vybrat co dělat dále:</string>
     <string name="tabInstall">Framework</string>
@@ -14,6 +17,8 @@
     <string name="welcome_update_available">Pro jeden nebo více modulů je k dispozici aktualizace.</string>
     <string name="tabSettings">Nastavení</string>
     <string name="tabSettingsDescription">V této sekci je možné konfigurovat Xposed Instalátor a framework.</string>
+    <string name="tabLogs">Log</string>
+    <string name="tabLogsDescription">Zobrazit a uložit/odeslat log Xposed frameworku.</string>
     <string name="tabAbout">O aplikaci</string>
     <string name="tabAboutDescription">Dozvědět se něco o lidech, kteří vytvořili Xposed, jako kde získat podporu atd.</string>
     <!-- Installer tab -->
@@ -71,12 +76,16 @@
     <string name="settings_group_experimental">Experimentální</string>
     <string name="settings_performance_experiment">Experimentální výkon</string>
     <string name="settings_performance_experiment_summary">Zapnutím této volby se systém může zrychlit, ale také zpomalit, nebo zůstat stejný. Tuto vlastnost je vhodné řádně otestovat. Po změně této hodnoty je nutné přeinstalovat framework a restartovat.</string>
+    <!-- Logs tab -->
+    <string name="logs_load_failed">Nepodařilo se načíst log:</string>
+    <string name="logs_save_failed">Nepodařilo se uložit log na SD kartu:</string>
+    <string name="sdcard_not_writable">SD karta nebyla nenalezena nebo na ni nelze zapisovat</string>
     <!-- About tab -->
     <string name="about_developers_label">Hlavní vývojáři:</string>
     <string name="about_developers"><a href="http://forum.xda-developers.com/member.php?u=4419114">rovo89</a> a <a href="http://forum.xda-developers.com/member.php?u=4322181">Tungstwenty</a></string>
     <string name="about_developers_warning">Prosím <b>nekontaktujte</b> nás přímo za účelem podpory, je pro to určen odkaz níže.</string>
     <string name="about_translator_label">Překlad:</string>
-    <string name="translator">Petr kecinzer Řezníček</string>
+	<string name="translator">Petr kecinzer Řezníček, Aleš Berka (Aleq)</string>
     <string name="about_version_label">Verze této aplikace:</string>
     <string name="about_source_label">Zdrojový kód:</string>
     <string name="about_support_label">Pro získání podpory:</string>
